jvm-settings - add jvm settings